# server/src/swagger.json
@@ -6,6 +6,23 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"Ord": {
+				"properties": {
+					"inscription_number": {
+						"type": "number",
+						"format": "double"
+					},
+					"id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"inscription_number",
+					"id"
+				],
+				"type": "object",
+				"description": "Model Ord"
+			},
 			"WalletMnemonic": {
 				"properties": {
 					"mnemonic": {
@@ -312,6 +329,70 @@
 						}
 					}
 				}
+			}
+		},
+		"/ordinals": {
+			"get": {
+				"operationId": "OrdIndex",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"items": {
+												"$ref": "#/components/schemas/Ord"
+											},
+											"type": "array"
+										},
+										{
+											"type": "string",
+											"enum": [
+												"Sorry, your request is too powerful :(. Ask for a maximum of 50 ordinals at a time."
+											]
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"ord"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "from",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "to",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": false,
+						"schema": {
+							"default": 2,
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		},
 		"/wallet/status": {
